--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Quote of the Day </h1>
         <p>Press the button below to recieve a random quote! </p>
         <button class="btn btn-info p-3"  onclick="changeQuote()">New Quote</button>
-        <h3 id="quote" class="text-center">"The best revenge is massive success."</h3>
+        <p id="quote" class="text-center">"The best revenge is massive success."</p>
        <div class="d-flex justify-content-center align-items-center gap-5">
         <img src="images/1.jpg" class="rounded-circle " alt="" id="img">
         <h5 id="auther">Oscar Wilde</h5>
