--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Lilita+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ultra&family=Unbounded:wght@200..900&display=swap"
+        rel="stylesheet">
+
+
     <link rel="stylesheet" href="css/style.css">
     <title>Docume nt</title>
 </head>
@@ -15,13 +24,13 @@
     <div class="container vh-100  d-flex flex-column justify-content-evenly align-items-center">
         <h1>Quote of the Day </h1>
         <p>Press the button below to recieve a random quote! </p>
-        <button class="btn btn-info p-3"  onclick="changeQuote()">New Quote</button>
+        <button class="btn btn-info p-3" onclick="changeQuote()">New Quote</button>
         <p id="quote" class="text-center">"The best revenge is massive success."</p>
-       <div class="d-flex justify-content-center align-items-center gap-5">
-        <img src="images/1.jpg" class="rounded-circle " alt="" id="img">
-        <h5 id="auther">Oscar Wilde</h5>
-       </div>
-    
+        <div class="d-flex justify-content-center align-items-center gap-5">
+            <img src="images/1.jpg" class="rounded-circle " alt="" id="img">
+            <h5 id="auther">Oscar Wilde</h5>
+        </div>
+
     </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
